fixed web mail css layout issue with preview

--- a/public/bootstrap/less/trpMails.less
+++ b/public/bootstrap/less/trpMails.less
@@ -64,6 +64,7 @@
 
 .trpMailLeft {
   display:inline-block;
+  max-width: 700px;
 }
 
 .trpMailRight {
@@ -137,8 +138,8 @@
   }
 
   .trpMailLeft {
-  display:inline-block;
-  max-width: 300px;
+    display:inline-block;
+    max-width: 300px;
 }
 
 .trpMailBody {
